@@ -6,6 +6,7 @@
 - Feature: [#19547] Add large sloped turns to hybrid coaster and single rail coaster.
 - Feature: [OpenMusic#25] Added Prehistoric ride music style.
 - Improved: [#18490] Reduce guests walking through trains on level crossing next to station.
+- Improved: [#18996] When marketing campaigns are disabled, disable the Marketing tab in the Finances window.
 - Improved: [#19764] Miscellaneous scenery tab now grouped next to the all-scenery tab.
 - Improved: [#19830] “Highlight path issues” will now hide wall elements.
 - Fix: [#12598] Number of holes is not set correctly when saving track designs.
